@@ -1,3 +1,6 @@
+2006-10-15  Juho Vähä-Herttua
+   * Fix timestamp command to be correct
+
 2006-09-26  Juho Vähä-Herttua
    * Small cosmetic fix to Window.java
 
